# basketball-bot-telegram

./: .gitignore  Dockerfile  README.md  REQUIREMENTS.txt  bot.py  image_generator.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: publish.yml
sports-bot-plugins/fifa-world-cup-plugin/: pyproject.toml
sports-bot-plugins/fifa-world-cup-plugin/src/fifa_world_cup_plugin/: plugin.py
sports-bot-plugins/fifa-world-cup-plugin/src/fifa_world_cup_plugin/services/espn/: live_score_service.py  team_service.py
sports-bot-plugins/fifa-world-cup-plugin/src/fifa_world_cup_plugin/services/football_api/: live_score_service.py  team_service.py
sports-bot-plugins/fifa-world-cup-plugin/src/fifa_world_cup_plugin/util/: common.py
sports-bot-plugins/fifa-world-cup-plugin/src/fifa_world_cup_plugin/util/espn/: fifa_api.py  fifa_utils.py
sports-bot-plugins/fifa-world-cup-plugin/src/fifa_world_cup_plugin/util/football_api/: fifa_api.py  fifa_utils.py
sports-bot-plugins/nba-plugin/: README.md  pyproject.toml
sports-bot-plugins/nba-plugin/src/nba_plugin/: __init__.py  plugin.py
sports-bot-plugins/nba-plugin/src/nba_plugin/api/: nba.py
sports-bot-plugins/nba-plugin/src/nba_plugin/services/: live_score_service.py  player_service.py  team_service.py
sports-bot-plugins/nba-plugin/src/nba_plugin/util/: nba_utils.py  utils.py
sports-bot-telegram/: .gitignore  Dockerfile  README.md  pyproject.toml
sports-bot-telegram-plugin/: .gitignore  pyproject.toml
sports-bot-telegram-plugin/src/sports_bot_telegram_plugin/: __init__.py  plugin.py
sports-bot-telegram-plugin/src/sports_bot_telegram_plugin/types/: MatchScores.py
sports-bot-telegram/.github/workflows/: publish.yml
sports-bot-telegram/src/bot/: __init__.py  image_generator.py  main.py  settings.py
sports-bot-telegram/src/bot/plugin_management/: __init__.py  discovery.py
