[tool.poetry]
name = "sports-bot-telegram-plugin"
version = "0.1.0"
description = "Plugin interface for sports-bot-telegram"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "sports_bot_telegram_plugin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 