[tool.poetry]
name = "sports-bot-telegram-plugin"
version = "1.2.0"
description = "Plugin interface for sports-bot-telegram"
authors = ["josephoneill <devjoseph97@gmail.com>"]
readme = "README.md"
packages = [{include = "sports_bot_telegram_plugin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "^21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 