[tool.poetry]
name = "sports-bot-telegram"
version = "1.1.3"
description = "Telegram bot for sports information"
authors = ["josephoneill <devjoseph97@gmail.com>"]
packages = [
    { include = "bot", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^21.0.0"
sports-bot-telegram-plugin = {path = "../sports-bot-telegram-plugin", develop = true}
nba-plugin = { path = "../sports-bot-plugins/nba-plugin", develop = true }
pytz = "^2024.1"
python-dotenv = "^1.0.0"
Pillow = "^10.0.0"
rapidfuzz = "^3.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."sports_bot_telegram_plugins"]
# This section will be used by plugins to register themselves
