[tool.poetry]
name = "fifa-world-cup-plugin"
version = "1.2.0"
description = "FIFA world cupt plugin for sports-bot-telegram"
authors = ["josephoneill <devjoseph97@gmail.com>"]
readme = "README.md"
packages = [{include = "fifa_world_cup_plugin", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
sports-bot-telegram-plugin = {path = "../../sports-bot-telegram-plugin", develop = true}
python-telegram-bot = "^21.0.0"
diskcache = "^5.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."sports_bot_telegram_plugins"]
fifa_world_cup = "fifa_world_cup_plugin.plugin:register_plugin" 